fix: distance overlapping

--- a/styles.css
+++ b/styles.css
@@ -737,9 +737,9 @@ cursor:pointer;
     cursor: pointer;
     transform:scale(.98);
 }
-.si-completed{
+/* .si-completed{
     opacity:.7;
-}
+} */
 /* .si-glass{
     backdrop-filter: blur(1.9px);
     -webkit-backdrop-filter: blur(1.9px);
@@ -1350,6 +1350,11 @@ padding:8px;
 
 
 #nt-distance-container{
+    border:2px dotted #000;
+    padding:4px;
+    border-radius: 12px;
+    border-top:none;
+    border-bottom:none;
 
 }
 #nt-distance-container:hover{
